apps/base/slskr/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: slskr-api
  name: slskr-api
  namespace: slskr
spec:
  ports:
    - name: http
      port: 5030
      protocol: TCP
      targetPort: http
  selector:
    app: slskr-api
  type: ClusterIP
