apps/base/slskr/resources/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: slskr-api
  namespace: slskr
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector: {}
    - ports:
        - port: 80
          protocol: TCP
        - port: 443
          protocol: TCP
        - port: 2234
          protocol: TCP
        - port: 2235
          protocol: TCP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 127.0.0.0/8
              - 169.254.0.0/16
              - 172.16.0.0/12
              - 192.168.0.0/16
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - port: 5030
          protocol: TCP
  podSelector:
    matchLabels:
      app: slskr-api
  policyTypes:
    - Egress
    - Ingress
